@@ -7,8 +7,8 @@ import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import javax.swing.BorderFactory;
 import javax.swing.JComboBox;
 import javax.swing.JLabel;
@@ -31,16 +31,28 @@ import org.preesm.commons.files.PreesmIOHelper;
  * @author orenaud
  */
 public class AnalysisPage4 {
-  static String                                               path;
-  public static final String                                  NET_NAME                 = "multicriteria.csv";
-  List<NetworkInfo>                                           networkInfoList          = new ArrayList<>();
-  static List<NetworkInfo>                                    networkInfoNormalList    = new ArrayList<>();
+
+  private final String                   path;
+  private static final String            NET_NAME              = "multicriteria.csv";
+  private static final List<NetworkInfo> networkInfoList       = new ArrayList<>();
+  private final List<NetworkInfo>        networkInfoNormalList = new ArrayList<>();
+
   Map<Integer, Map<Integer, Map<Integer, List<NetworkInfo>>>> nodeNetworkInfoNormalMap = new LinkedHashMap<>();
   int                                                         nodeKey                  = 0;
   int                                                         coreKey                  = 0;
   int                                                         coreFrequencyKey         = 0;
-  JFreeChart                                                  chart;
-  XYSeriesCollection                                          dataset;
+
+  private static final String DESCRIPTION = """
+      <html>
+      This chart gives a comprehensive comparison of the 5 main network topologies
+      (if they exist) concerning a selected number of nodes, dynamically chosen from a ComboBox.<br>
+      The topologies are: Cluster with a Crossbar,  Cluster with a Shared Backbone, Torus Cluster,
+      Fat-Tree Cluster and Dragonfly Cluster.<br>
+      This visualisation captures the normalised performance metrics of
+      Throughput, Memory, Energy, and Cost for each network configuration.<br>
+      Normalised value = (x - minvalue) / (maxvalue - minvalue)
+      </html>
+      """;
 
   /**
    * Constructs an AnalysisPage4 object with the given parameters.
@@ -49,8 +61,7 @@ public class AnalysisPage4 {
    *          The file path for reading data.
    */
   public AnalysisPage4(String path) {
-    AnalysisPage4.path = path;
-
+    this.path = path;
   }
 
   /**
@@ -70,15 +81,13 @@ public class AnalysisPage4 {
     nodeNetworkInfoNormalMap.clear();
     fillNodeNetworkInfoNormalMap();
 
-    // final XYSeriesCollection
-    dataset = fillMultiCriteriaDataSet();
+    final XYSeriesCollection dataset = fillMultiCriteriaDataSet();
 
-    // final JFreeChart
-    chart = polarChart(dataset);
+    final JFreeChart chart = polarChart(dataset);
     panel.setBackground(Color.white);
     panel.setLayout(new BorderLayout());
 
-    final JLabel descriptionLabel = new JLabel(description());
+    final JLabel descriptionLabel = new JLabel(DESCRIPTION);
     descriptionLabel.setForeground(Color.darkGray);
     descriptionLabel.setHorizontalAlignment(SwingConstants.CENTER);
     descriptionLabel.setVerticalAlignment(SwingConstants.TOP);
@@ -122,7 +131,6 @@ public class AnalysisPage4 {
         nodeNetworkInfoNormalMap.get(network.getNode()).get(network.getCore()).get(network.getCoreFrequency())
             .add(network);
       }
-
     }
 
   }
@@ -139,38 +147,16 @@ public class AnalysisPage4 {
   private JPanel createTextFieldPanel(JFreeChart chart, XYSeriesCollection dataset) {
 
     final JPanel textFieldPanel = new JPanel();
-    textFieldPanel.setLayout(new GridLayout(3, 2, 0, 0));
-
-    final JComboBox<String> nodeCombo = addComboBoxWithLabel(textFieldPanel,
-        "Select the number of nodes for network analysis:", nodeNetworkInfoNormalMap);
-    final JComboBox<String> coreCombo = addComboBoxWithLabel(textFieldPanel,
-        "Select the number of cores for network analysis:", nodeNetworkInfoNormalMap.get(nodeKey));
-    final JComboBox<String> coreFreqCombo = addComboBoxWithLabel(textFieldPanel,
-        "Select the core frequency for network analysis:", nodeNetworkInfoNormalMap.get(nodeKey).get(coreKey));
-
+    textFieldPanel.setLayout(new GridLayout(1, 2, 0, 0));
+    final JComboBox<String> archiCombo = addComboBoxWithLabel(textFieldPanel,
+        "Select the number of nodes:cores:frequency for network analysis:", nodeNetworkInfoNormalMap);
     // node selection
 
-    nodeCombo.addActionListener(e -> {
-      nodeKey = Integer.valueOf(nodeCombo.getSelectedItem().toString());
-      coreKey = nodeNetworkInfoNormalMap.get(nodeKey).keySet().stream().findFirst().orElseThrow();
-      updateCoreComboItems(coreCombo);
-      updateDataset(dataset);
-      chart.fireChartChanged();
-    });
-
-    // core selection
-
-    coreCombo.addActionListener(e -> {
-      coreKey = Integer.valueOf(coreCombo.getSelectedItem().toString());
-      coreFrequencyKey = nodeNetworkInfoNormalMap.get(nodeKey).get(coreKey).keySet().stream().findFirst().orElseThrow();
-      updateCoreFreqComboItems(coreFreqCombo);
-      updateDataset(dataset);
-      chart.fireChartChanged();
-    });
-    // core frequency selection
-
-    coreFreqCombo.addActionListener(e -> {
-      coreFrequencyKey = Integer.valueOf(coreFreqCombo.getSelectedItem().toString());
+    archiCombo.addActionListener(e -> {
+      final String[] key = archiCombo.getSelectedItem().toString().split(":");
+      nodeKey = Integer.valueOf(key[0]);
+      coreKey = Integer.valueOf(key[1]);
+      coreFrequencyKey = Integer.valueOf(key[2]);
       updateDataset(dataset);
       chart.fireChartChanged();
     });
@@ -182,8 +168,19 @@ public class AnalysisPage4 {
   private JComboBox<String> addComboBoxWithLabel(JPanel panel, String labelText, Map<Integer, ?> dataMap) {
     final JLabel label = new JLabel(labelText);
     panel.add(label);
+    String[] items;
+    final List<String> itemList = new ArrayList<>();
+    for (final Entry<Integer, Map<Integer, Map<Integer, List<NetworkInfo>>>> node : nodeNetworkInfoNormalMap
+        .entrySet()) {
+      for (final Entry<Integer, Map<Integer, List<NetworkInfo>>> core : node.getValue().entrySet()) {
+        for (final int freq : core.getValue().keySet()) {
+          itemList.add(node.getKey() + ":" + core.getKey() + ":" + freq);
+        }
 
-    final String[] items = dataMap.keySet().stream().map(String::valueOf).toArray(String[]::new);
+      }
+    }
+    items = itemList.toArray(new String[0]);
+
     final JComboBox<String> comboBox = new JComboBox<>(items);
     comboBox.setBackground(Color.white);
     panel.add(comboBox);
@@ -191,48 +188,17 @@ public class AnalysisPage4 {
     return comboBox;
   }
 
-  private void updateCoreFreqComboItems(JComboBox<String> combo) {
-    final String selectedItem = (String) combo.getSelectedItem();
-    combo.removeAllItems();
-    for (final int i : nodeNetworkInfoNormalMap.get(nodeKey).get(coreKey).keySet()) {
-
-      combo.addItem(String.valueOf(i));
-    }
-    // Set back the selected item if it exists in the new items
-    if (selectedItem != null) {
-      for (int i = 0; i < combo.getItemCount(); i++) {
-        if (selectedItem.equals(combo.getItemAt(i))) {
-          combo.setSelectedItem(selectedItem);
-          break;
-        }
-      }
-    }
-  }
-
-  private void updateCoreComboItems(JComboBox<String> combo) {
-    final String selectedItem = (String) combo.getSelectedItem();
-    combo.removeAllItems();
-    for (final int i : nodeNetworkInfoNormalMap.get(nodeKey).keySet()) {
-      combo.addItem(String.valueOf(i));
-    }
-    // Set back the selected item if it exists in the new items
-    if (selectedItem != null) {
-      for (int i = 0; i < combo.getItemCount(); i++) {
-        if (selectedItem.equals(combo.getItemAt(i))) {
-          combo.setSelectedItem(selectedItem);
-          break;
-        }
-      }
-    }
-  }
-
   /**
    * Returns the list of normalized network information.
    *
    * @return The list of normalized network information.
    */
-  public static List<NetworkInfo> getNetworkInfoNormalList() {
+  public List<NetworkInfo> getNetworkInfoNormalList() {
     return networkInfoNormalList;
+  }
+
+  public static List<NetworkInfo> getnetworkInfoList() {
+    return networkInfoList;
   }
 
   /**
@@ -279,7 +245,7 @@ public class AnalysisPage4 {
    * @return The list of extracted metrics.
    */
   private List<Double> extractMetrics(List<NetworkInfo> networkInfoList, Function<NetworkInfo, Double> extractor) {
-    return networkInfoList.stream().map(extractor).collect(Collectors.toList());
+    return networkInfoList.stream().map(extractor).toList();
   }
 
   /**
@@ -301,16 +267,7 @@ public class AnalysisPage4 {
    * @return The minimum value.
    */
   private Double findMin(List<Double> values) {
-    if (values.size() < 2) {
-      // Handle the case where there are fewer than two values
-      return values.stream().findFirst().orElse(0.0);
-    }
-    // Find the minimum between the first two values
-    final Double minBetweenFirstTwo = Math.min(values.get(0), values.get(1));
-
-    // Find the minimum between the found minimum and the rest of the values
-    return values.stream().skip(2) // Ignore the first two values
-        .reduce(minBetweenFirstTwo, Math::min);
+    return values.stream().min(Double::compareTo).orElse(0.0);
   }
 
   /**
@@ -366,7 +323,6 @@ public class AnalysisPage4 {
           case "cost":
             cost = Double.valueOf(column[1]);
             break;
-
           default:
             break;
         }
@@ -389,6 +345,7 @@ public class AnalysisPage4 {
    */
   private void updateDataset(XYSeriesCollection dataset) {
     dataset.removeAllSeries();
+
     for (final NetworkInfo net : nodeNetworkInfoNormalMap.get(nodeKey).get(coreKey).get(coreFrequencyKey)) {
       final XYSeries s1 = new XYSeries(
           net.getTypeID() + ":" + net.getNode() + ":" + net.getCore() + ":" + net.getCoreFrequency());
@@ -408,6 +365,7 @@ public class AnalysisPage4 {
    */
   private XYSeriesCollection fillMultiCriteriaDataSet() {
     final XYSeriesCollection dataset = new XYSeriesCollection();
+
     for (final NetworkInfo net : nodeNetworkInfoNormalMap.get(nodeKey).get(coreKey).get(coreFrequencyKey)) {
       final XYSeries s1 = new XYSeries(
           net.getTypeID() + ":" + net.getNode() + ":" + net.getCore() + ":" + net.getCoreFrequency());
@@ -454,21 +412,4 @@ public class AnalysisPage4 {
     return chart;
   }
 
-  /**
-   * Generates the description text for the analysis page.
-   *
-   * @return The description text in HTML format.
-   */
-  private String description() {
-    String description = "<html>";
-    description += "This chart gives a comprehensive comparison of the 5 main network topologies";
-    description += "(if they exist) concerning a selected number of nodes, dynamically chosen from a ComboBox.<br>";
-    description += "The topologies are: Cluster with a Crossbar,  Cluster with a Shared Backbone, Torus Cluster, ";
-    description += "Fat-Tree Cluster and Dragonfly Cluster.<br>";
-    description += "This visualization captures the normalized performance metrics of";
-    description += "Throughput, Memory, Energy, and Cost for each network configuration.<br>";
-    description += "Normalized value = (x - minvalue) / (maxvalue - minvalue)";
-    description += "</html>";
-    return description;
-  }
 }
